[project]
name = "sshd-cli"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "SeshuTarapatla", email = "seshu.tarapatla@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "asyncssh>=2.22.0",
    "pyyaml>=6.0.3",
    "rich>=14.3.1",
    "send2trash>=2.1.0",
    "sshconf>=0.2.7",
    "typer>=0.21.1",
    "validators>=0.35.0",
]

[project.scripts]
sshd-cli = "sshd_cli.__main__:app"

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "icecream>=2.1.10",
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "pyfiglet>=1.0.4",
]
